[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-refactor"
version = "0.1.0"
description = "Congress voting simulation framework"
authors = [{ name = "Unknown" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=1.7",
  "ruff>=0.1.8",
  "pyyaml>=6.0",
]

[project.scripts]
congress = "congress_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "layers*", "model*", "utils*", "configuration*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
