[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyflux"
version = "0.1.0"
description = "Advanced library for modeling and simulating legislative processes and parliamentary behavior"
authors = [{ name = "Unknown" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "matplotlib>=3.5",
  "pydantic>=1.10",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.0",
]
text-encoders = [
  "sentence-transformers>=2.2",
]
dev = [
  "pytest>=7.0",
  "mypy>=1.7",
  "ruff>=0.1.8",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["policyflux*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
