[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyflux"
version = "0.1.0"
description = "Advanced library for modeling and simulating legislative processes and parliamentary behavior"
authors = [{ name = "Piotr Pawelec", email = "pawelecpiotr404@gmail.com" }]
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["simulation", "legislative", "political-science", "monte-carlo", "agent-based"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "matplotlib>=3.5",
  "pydantic>=1.10",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.0",
]
text-encoders = [
  "sentence-transformers>=2.2",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "mypy>=1.7",
  "ruff>=0.1.8",
  "pyyaml>=6.0",
  "pre-commit>=3.5",
  "build>=1.2.0",
  "twine>=5.1.0",
]
examples = [
  "jupyter>=1.0",
  "notebook>=7.0",
]

[project.urls]
Homepage = "https://github.com/piotrpawelec/policyflux"
Repository = "https://github.com/piotrpawelec/policyflux"
Documentation = "https://piotrpawelec.github.io/policyflux/"
Issues = "https://github.com/piotrpawelec/policyflux/issues"
Changelog = "https://github.com/piotrpawelec/policyflux/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["policyflux*"]

[tool.pytest.ini_options]
addopts = "-q --tb=short"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "unit: fast, isolated unit tests",
  "smoke: end-to-end smoke tests",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["policyflux"]
omit = [
  "policyflux/model/*",
  "policyflux/scenarios/*",
  "policyflux/layers/neural_layers.py",
  "policyflux/math_models/ergmp.py",
  "policyflux/math_models/tullock_contest.py",
  "policyflux/__pycache__/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__",
  "raise NotImplementedError",
  "pass",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "RUF",    # ruff-specific rules
  "C4",     # flake8-comprehensions
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B010",   # do not call setattr with a constant attribute value
  "SIM108", # use ternary operator (not always clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "torch.*",
  "sentence_transformers.*",
  "sklearn.*",
  "matplotlib.*",
  "pandas.*",
  "pydantic_settings.*",
  "torchtext.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "policyflux.layers.neural",
  "policyflux.layers.ideal_point",
  "policyflux.data_processing.text_processor",
]
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_calls = false
